Update my "biography".

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </script>
     <h1 style="text-align: center">Hi There, and welcome to my website!</h1>
     <h4 style="text-align: center">
-      I'm a developer and a tester. I love technology.
+      I test and code random stuff. My main interest is technology.
     </h4>
     <div style="text-align: center">
       <h1>Check out my social media!</h1>
