Add an experimental overlay.

--- a/index.html
+++ b/index.html
@@ -94,5 +94,6 @@
     </div>
     <br />
     <footer style="text-align: center">&copy; 2021-2022 AlessGoss</footer>
+    <div class="overlay" id="main-overlay"></div>
   </body>
 </html>
