--- a/assets/topnav.html
+++ b/assets/topnav.html
@@ -45,5 +45,8 @@
         <!--<![endif]-->
       </div>
     </div>
+    <div class="website-background">
+      <div class="website-background-container"></div>
+    </div>
   </body>
 </html>
