--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
         $("#topnav").load("assets/topnav.html");
       });
     </script>
-    <h1 style="text-align: center">Hi There, and welcome to my website!</h1>
-    <h4 style="text-align: center">
-      I test and code random stuff. My main interest is technology.
-    </h4>
-    <div style="text-align: center">
+    <div class="--ignore-light-mode">
+      <h1 style="text-align: center">Hi There, and welcome to my website!</h1>
+      <h4 style="text-align: center">
+        I test and code random stuff. My main interest is technology.
+      </h4>
+    </div>
+    <div style="text-align: center" class="--ignore-light-mode">
       <h1>Check out my social media!</h1>
       <br />
       <form action="https://twitter.com/AlessGoss" target="_blank">
