--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
       </div>
     </div>
     <br />
-    <footer style="text-align: center">&copy; 2021-2022 AlessGoss</footer>
+    <div class="--ignore-light-mode">
+      <footer style="text-align: center">&copy; 2021-2022 AlessGoss</footer>
+    </div>
     <div class="overlay" id="main-overlay"></div>
   </body>
 </html>
