Change copyright text style & integrate it in 404 page.

--- a/404.html
+++ b/404.html
@@ -43,5 +43,11 @@
         the "Home" button takes you to my homepage.
       </div>
     </div>
+    <br />
+    <div class="--ignore-light-mode">
+      <footer style="text-align: center; font-size: small; color: #aaa">
+        &copy; 2021-2022 AlessGoss
+      </footer>
+    </div>
   </body>
 </html>
