--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
     </div>
     <br />
     <div class="--ignore-light-mode">
-      <footer style="text-align: center">&copy; 2021-2022 AlessGoss</footer>
+      <footer style="text-align: center; font-size: small; color: #aaa">
+        &copy; 2021-2022 AlessGoss
+      </footer>
     </div>
     <div class="overlay" id="main-overlay"></div>
   </body>
