Add Pride Month banner + Minor Changes.
POSSIBLE BUG: FontAwesome icons might not show.

NOTE: The Pride Month banner will not show on Internet Explorer 9 and older.

Minor Changes:
- On line 16 in index.html, I replaced "Check out Aless Website!" with "Check out my Website!".
- On line 41 in index.html, I replaced "Check out my social media!" with "Check out my social links!".
- On the copyright text, I replaced <(/)footer> with <(/)p>

--- a/404.html
+++ b/404.html
@@ -45,9 +45,9 @@
     </div>
     <br />
     <div class="--ignore-light-mode">
-      <footer style="text-align: center; font-size: small; color: #aaa">
+      <p style="text-align: center; font-size: small; color: #aaa">
         &copy; 2021-2022 AlessGoss
-      </footer>
+      </p>
     </div>
   </body>
 </html>
