--- a/assets/topnav.html
+++ b/assets/topnav.html
@@ -48,5 +48,13 @@
     <div class="website-background">
       <div class="website-background-container"></div>
     </div>
+    <br />
+    <!--[if gte IE 10]><!-->
+    <iframe
+      src="/assets/pride-month-banner.html"
+      frameborder="0"
+      class="pride-month-banner-iframe"
+    ></iframe>
+    <!--<![endif]-->
   </body>
 </html>
