--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       name="google-site-verification"
       content="Bf2Y0l0YWSFe-iqN4JecPsYjq7XJE_waZ6hBPq_z6Go"
     />
-    <meta name="description" content="Check out Aless Website!" />
+    <meta name="description" content="Check out my Website!" />
     <meta name="robots" content="noarchive" />
   </head>
   <body>
@@ -38,7 +38,7 @@
       </h4>
     </div>
     <div style="text-align: center" class="--ignore-light-mode">
-      <h1>Check out my social media!</h1>
+      <h1>Check out my social links!</h1>
       <br />
       <form action="https://twitter.com/AlessGoss" target="_blank">
         <button class="button" type="submit">
@@ -96,9 +96,9 @@
     </div>
     <br />
     <div class="--ignore-light-mode">
-      <footer style="text-align: center; font-size: small; color: #aaa">
+      <p style="text-align: center; font-size: small; color: #aaa">
         &copy; 2021-2022 AlessGoss
-      </footer>
+      </p>
     </div>
     <div class="overlay" id="main-overlay"></div>
   </body>
