Fix capitalization somewhere.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       });
     </script>
     <div class="--ignore-light-mode">
-      <h1 style="text-align: center">Hi There, and welcome to my website!</h1>
+      <h1 style="text-align: center">Hi there, and welcome to my website!</h1>
       <h4 style="text-align: center">
         I test and code random stuff. My main interest is technology.
       </h4>
