Remove Pride Month banner.

--- a/assets/topnav.html
+++ b/assets/topnav.html
@@ -50,11 +50,12 @@
     </div>
     <br />
     <!--[if gte IE 10]><!-->
-    <iframe
+    <!--     <iframe
       src="/assets/pride-month-banner.html"
       frameborder="0"
       class="pride-month-banner-iframe"
-    ></iframe>
+    ></iframe> -->
+    <!-- Pride Month ended. -->
     <!--<![endif]-->
   </body>
 </html>
