Fix first top navigation bar button height.

--- a/assets/topnav.html
+++ b/assets/topnav.html
@@ -30,7 +30,7 @@
             style="padding: 0 !important"
         /></a>
         <form action="../index.html">
-          <button class="button topnavtitle" type="submit">
+          <button class="button topnavtitle --fix-topnav-height" type="submit">
             Aless Website
           </button>
         </form>
