3 changes - Read the description.
Changes:

- Reduce the transition time of some elements.
- Change the Discord server link from the server widget link to the server invite link.
- Add some cool animations when loading the site. (The top navigation bar animation doesn't fully support Internet Explorer, but at least the top navigation bar is visible.)

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     />
     <meta name="description" content="Check out my Website!" />
     <meta name="robots" content="noarchive" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
   </head>
   <body>
     <noscript
@@ -32,13 +36,14 @@
         $("#topnav").load("assets/topnav.html");
       });
     </script>
-    <div class="--ignore-light-mode">
+    <div class="--ignore-light-mode animate__animated animate__bounceIn">
       <h1 style="text-align: center">Hi there, and welcome to my website!</h1>
       <h4 style="text-align: center">
         I test and code random stuff. My main interest is technology.
       </h4>
     </div>
     <div style="text-align: center" class="--ignore-light-mode">
+      <div class="animate__animated animate__zoomIn">
       <h1>Check out my social links!</h1>
       <br />
       <form action="https://twitter.com/AlessGoss" target="_blank">
@@ -56,12 +61,10 @@
         </button>
       </form>
       <br /><br />
-      <form action="https://discord.com/widget" target="_blank">
+      <form action="https://discord.com/invite/DFGcujmu" target="_blank">
         <button class="button" type="submit">
           <i class="fab fa-discord"></i> My Discord Server
         </button>
-        <input type="hidden" name="id" value="814923106229420042" />
-        <input type="hidden" name="theme" value="dark" />
       </form>
       <br /><br />
       <form action="https://t.me/AlessBlog" target="_blank">
@@ -75,8 +78,9 @@
           <i class="fab fa-reddit"></i> My Reddit Profile
         </button>
       </form>
+    </div>
       <br /><br />
-      <div class="container">
+      <div class="container animate__animated animate__bounceIn">
         <br /><i class="fab fa-github"></i> My GitHub...<br /><br />
         <form action="https://github.com/AlessGoss" target="_blank">
           <button class="button" type="submit">
@@ -96,7 +100,7 @@
       </div>
     </div>
     <br />
-    <div class="--ignore-light-mode">
+    <div class="--ignore-light-mode animate__animated animate__zoomIn">
       <p style="text-align: center; font-size: small; color: #aaa">
         &copy; 2021-2022 AlessGoss
       </p>
