--- a/assets/topnav.html
+++ b/assets/topnav.html
@@ -19,9 +19,13 @@
       </style></noscript
     >
     <script type="text/javascript" src="../app.js"></script>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
   </head>
   <body>
-    <div class="topnavgrp" style="width: 100%">
+    <div class="topnavgrp animate__animated animate__fadeInDown" style="width: 100%">
       <div class="topnav">
         <a href="/index.html"
           ><img
