--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <meta name="description" content="Check out my Website!" />
     <meta name="robots" content="noarchive" />
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
   <body>
     <noscript
@@ -44,41 +44,41 @@
     </div>
     <div style="text-align: center" class="--ignore-light-mode">
       <div class="animate__animated animate__zoomIn">
-      <h1>Check out my social links!</h1>
-      <br />
-      <form action="https://twitter.com/AlessGoss" target="_blank">
-        <button class="button" type="submit">
-          <i class="fab fa-twitter"></i> My Twitter Profile
-        </button>
-      </form>
-      <br /><br />
-      <form
-        action="https://www.youtube.com/channel/UCkmWOMZ3--qM5QVO6rx9qFQ"
-        target="_blank"
-      >
-        <button class="button" type="submit">
-          <i class="fab fa-youtube"></i> My YouTube Channel
-        </button>
-      </form>
-      <br /><br />
-      <form action="https://discord.com/invite/DFGcujmu" target="_blank">
-        <button class="button" type="submit">
-          <i class="fab fa-discord"></i> My Discord Server
-        </button>
-      </form>
-      <br /><br />
-      <form action="https://t.me/AlessBlog" target="_blank">
-        <button class="button" type="submit">
-          <i class="fab fa-telegram"></i> My Telegram Blog
-        </button>
-      </form>
-      <br /><br />
-      <form action="https://reddit.com/user/AlessDu59" target="_blank">
-        <button class="button" type="submit">
-          <i class="fab fa-reddit"></i> My Reddit Profile
-        </button>
-      </form>
-    </div>
+        <h1>Check out my social links!</h1>
+        <br />
+        <form action="https://twitter.com/AlessGoss" target="_blank">
+          <button class="button" type="submit">
+            <i class="fab fa-twitter"></i> My Twitter Profile
+          </button>
+        </form>
+        <br /><br />
+        <form
+          action="https://www.youtube.com/channel/UCkmWOMZ3--qM5QVO6rx9qFQ"
+          target="_blank"
+        >
+          <button class="button" type="submit">
+            <i class="fab fa-youtube"></i> My YouTube Channel
+          </button>
+        </form>
+        <br /><br />
+        <form action="https://discord.com/invite/3uq9hDDwmn" target="_blank">
+          <button class="button" type="submit">
+            <i class="fab fa-discord"></i> My Discord Server
+          </button>
+        </form>
+        <br /><br />
+        <form action="https://t.me/AlessBlog" target="_blank">
+          <button class="button" type="submit">
+            <i class="fab fa-telegram"></i> My Telegram Blog
+          </button>
+        </form>
+        <br /><br />
+        <form action="https://reddit.com/user/AlessDu59" target="_blank">
+          <button class="button" type="submit">
+            <i class="fab fa-reddit"></i> My Reddit Profile
+          </button>
+        </form>
+      </div>
       <br /><br />
       <div class="container animate__animated animate__bounceIn">
         <br /><i class="fab fa-github"></i> My GitHub...<br /><br />
