--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- If you wanna check out the website's source code, go to: https://github.com/AlessGoss/alessgoss.github.io. You're the best! :) -->
+<!-- If you wanna check out the website source code, go to: https://github.com/AlessGoss/alessgoss.github.io. Enjoy! :) -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
