Layout improvement and minor changes

--- a/assets/topnav.html
+++ b/assets/topnav.html
@@ -20,12 +20,15 @@
     >
     <script type="text/javascript" src="../app.js"></script>
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
   <body>
-    <div class="topnavgrp animate__animated animate__fadeInDown" style="width: 100%">
+    <div
+      class="topnavgrp animate__animated animate__fadeInDown"
+      style="width: 100%"
+    >
       <div class="topnav">
         <a href="/index.html"
           ><img
@@ -33,7 +36,7 @@
             class="topnavicon button"
             style="padding: 0 !important"
         /></a>
-        <form action="../index.html">
+        <form action="../index.html" class="topnavform">
           <button class="button topnavtitle --fix-topnav-height" type="submit">
             Aless Website
           </button>
@@ -44,7 +47,7 @@
           id="toggleThemeBtn"
           onclick="lightMode(true)"
         >
-          <i class="fas fa-sun"></i> (Light mode)
+          <i class="fas fa-sun"></i> Light mode
         </button>
         <!--<![endif]-->
       </div>
