--- a/index.html
+++ b/index.html
@@ -44,50 +44,44 @@
     </div>
     <div style="text-align: center" class="--ignore-light-mode">
       <div class="animate__animated animate__zoomIn">
-        <h1>Check out my social links!</h1>
-        <br />
+        <h2>Check out my social links!</h2>
         <form action="https://twitter.com/AlessGoss" target="_blank">
           <button class="button" type="submit">
-            <i class="fab fa-twitter"></i> My Twitter Profile
+            <i class="fab fa-twitter"></i> Twitter Profile
           </button>
         </form>
-        <br /><br />
         <form
           action="https://www.youtube.com/channel/UCkmWOMZ3--qM5QVO6rx9qFQ"
           target="_blank"
         >
           <button class="button" type="submit">
-            <i class="fab fa-youtube"></i> My YouTube Channel
+            <i class="fab fa-youtube"></i> YouTube Channel
           </button>
         </form>
-        <br /><br />
         <form action="https://discord.com/invite/3uq9hDDwmn" target="_blank">
           <button class="button" type="submit">
-            <i class="fab fa-discord"></i> My Discord Server
+            <i class="fab fa-discord"></i> Discord Server
           </button>
         </form>
-        <br /><br />
         <form action="https://t.me/AlessBlog" target="_blank">
           <button class="button" type="submit">
-            <i class="fab fa-telegram"></i> My Telegram Blog
+            <i class="fab fa-telegram"></i> Telegram Blog
           </button>
         </form>
-        <br /><br />
         <form action="https://reddit.com/user/AlessDu59" target="_blank">
           <button class="button" type="submit">
-            <i class="fab fa-reddit"></i> My Reddit Profile
+            <i class="fab fa-reddit"></i> Reddit Profile
           </button>
         </form>
       </div>
       <br /><br />
       <div class="container animate__animated animate__bounceIn">
-        <br /><i class="fab fa-github"></i> My GitHub...<br /><br />
+        <br /><i class="fab fa-github"></i> GitHub<br /><br />
         <form action="https://github.com/AlessGoss" target="_blank">
           <button class="button" type="submit">
             <i class="fas fa-user-circle"></i> Profile
           </button>
         </form>
-        <br /><br />
         <form
           action="https://github.com/AlessGoss/alessgoss.github.io"
           target="_blank"
