--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
             <i class="fas fa-code"></i> Website Repository
           </button>
         </form>
+        <form action="https://gist.github.com/AlessGoss" target="_blank">
+          <button class="button" type="submit">
+            <i class="fas fa-file-code"></i> Gists
+          </button>
+        </form>
         <br /><br />
       </div>
     </div>
