Add animations in 404.html

--- a/404.html
+++ b/404.html
@@ -22,29 +22,36 @@
       });
     </script>
     <div class="--ignore-light-mode">
-      <h1 style="text-align: center; font-size: 100px">404</h1>
-      <p style="text-align: center">
+      <h1
+        style="text-align: center; font-size: 100px"
+        class="animate__animated animate__bounceIn"
+      >
+        404
+      </h1>
+      <p style="text-align: center" class="animate__animated animate__zoomIn">
         Oh no, you are lost! I can take you back if you want. Click one of the
         buttons below.
       </p>
     </div>
     <br />
     <div style="text-align: center">
-      <button class="button" onClick="history.back()">
-        <i class="fas fa-arrow-left"></i> Back
-      </button>
-      <form action="/index.html" style="display: inline-block">
-        <button class="button" type="submit">
-          <i class="fas fa-home"></i> Home
+      <div class="animate__animated animate__bounceIn">
+        <button class="button" onClick="history.back()">
+          <i class="fas fa-arrow-left"></i> Back
         </button>
-      </form>
-      <div class="--ignore-light-mode">
+        <form action="/index.html" style="display: inline-block">
+          <button class="button" type="submit">
+            <i class="fas fa-home"></i> Home
+          </button>
+        </form>
+      </div>
+      <div class="--ignore-light-mode animate__animated animate__zoomIn">
         <br /><br />The "Back" button takes you back where you was before and
         the "Home" button takes you to my homepage.
       </div>
     </div>
     <br />
-    <div class="--ignore-light-mode">
+    <div class="--ignore-light-mode animate__animated animate__bounceIn">
       <p style="text-align: center; font-size: small; color: #aaa">
         &copy; 2021-2022 AlessGoss
       </p>
