--- a/assets/topnav.html
+++ b/assets/topnav.html
@@ -7,10 +7,13 @@
     <title>Top navigation bar</title>
     <meta name="robots" content="noindex" />
     <link rel="stylesheet" href="../styles.css" />
-    <script
-      src="https://kit.fontawesome.com/5e1adbb88d.js"
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous"
-    ></script>
+      referrerpolicy="no-referrer"
+    />
     <noscript
       ><style>
         #toggleThemeBtn {
