--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page not found.</title>
+    <title>Page not found</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <link rel="icon" href="/favicon.png" />
     <link rel="stylesheet" href="/styles.css" />
