Change capitalization of buttons in `<body>`

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h2>Check out my social links!</h2>
         <form action="https://twitter.com/AlessGoss" target="_blank">
           <button class="button" type="submit">
-            <i class="fab fa-twitter"></i> Twitter Profile
+            <i class="fab fa-twitter"></i> Twitter profile
           </button>
         </form>
         <form
@@ -55,22 +55,22 @@
           target="_blank"
         >
           <button class="button" type="submit">
-            <i class="fab fa-youtube"></i> YouTube Channel
+            <i class="fab fa-youtube"></i> YouTube channel
           </button>
         </form>
         <form action="https://discord.com/invite/3uq9hDDwmn" target="_blank">
           <button class="button" type="submit">
-            <i class="fab fa-discord"></i> Discord Server
+            <i class="fab fa-discord"></i> Discord server
           </button>
         </form>
         <form action="https://t.me/AlessBlog" target="_blank">
           <button class="button" type="submit">
-            <i class="fab fa-telegram"></i> Telegram Blog
+            <i class="fab fa-telegram"></i> Telegram blog
           </button>
         </form>
         <form action="https://reddit.com/user/AlessDu59" target="_blank">
           <button class="button" type="submit">
-            <i class="fab fa-reddit"></i> Reddit Profile
+            <i class="fab fa-reddit"></i> Reddit profile
           </button>
         </form>
       </div>
@@ -87,7 +87,7 @@
           target="_blank"
         >
           <button class="button" type="submit">
-            <i class="fas fa-code"></i> Website Repository
+            <i class="fas fa-code"></i> Website repository
           </button>
         </form>
         <form action="https://gist.github.com/AlessGoss" target="_blank">
