--- a/404.html
+++ b/404.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page not found</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <link rel="icon" href="/favicon.png" />
     <link rel="stylesheet" href="/styles.css" />
     <meta
@@ -12,49 +11,41 @@
       content="This is where you are when you are lost on my website."
     />
     <meta name="robots" content="noindex" />
-    <script type="text/javascript" src="app.js"></script>
+    <meta http-equiv="refresh" content="8; url=/" />
+    <!--[if gte IE 10]><!-->
+    <style>
+      @keyframes slowly-fade-out {
+        from {
+          opacity: 1;
+        }
+        to {
+          opacity: 0;
+        }
+      }
+      body {
+        animation: slowly-fade-out 2s 6s forwards;
+      }
+    </style>
+    <!--<![endif]-->
+    <style>
+      * {
+        text-align: center;
+      }
+      h1 {
+        font-size: 8em;
+        line-height: 50px;
+      }
+      small {
+        color: #aaa;
+      }
+    </style>
   </head>
   <body>
-    <div id="topnav"></div>
-    <script>
-      $(function () {
-        $("#topnav").load("/assets/topnav.html");
-      });
-    </script>
-    <div class="--ignore-light-mode">
-      <h1
-        style="text-align: center; font-size: 100px"
-        class="animate__animated animate__bounceIn"
-      >
-        404
-      </h1>
-      <p style="text-align: center" class="animate__animated animate__zoomIn">
-        Oh no, you are lost! I can take you back if you want. Click one of the
-        buttons below.
-      </p>
-    </div>
-    <br />
-    <div style="text-align: center">
-      <div class="animate__animated animate__bounceIn">
-        <button class="button" onClick="history.back()">
-          <i class="fas fa-arrow-left"></i> Back
-        </button>
-        <form action="/index.html" style="display: inline-block">
-          <button class="button" type="submit">
-            <i class="fas fa-home"></i> Home
-          </button>
-        </form>
-      </div>
-      <div class="--ignore-light-mode animate__animated animate__zoomIn">
-        <br /><br />The "Back" button takes you back where you was before and
-        the "Home" button takes you to my homepage.
-      </div>
-    </div>
-    <br />
-    <div class="--ignore-light-mode animate__animated animate__bounceIn">
-      <p style="text-align: center; font-size: small; color: #aaa">
-        &copy; 2021-2022 AlessGoss
-      </p>
-    </div>
+    <h1>404</h1>
+    <h2>Page not found</h2>
+    <h5>
+      You will be redirected to the home page of my website in a few seconds. ;)
+    </h5>
+    <small>&copy; 2021-2022 AlessGoss</small>
   </body>
 </html>
