Change capitalization of website title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aless Website</title>
+    <title>Aless website</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
@@ -47,7 +47,7 @@
         /></a>
         <form action="../index.html" class="topnavform">
           <button class="button topnavtitle --fix-topnav-height" type="submit">
-            Aless Website
+            Aless website
           </button>
         </form>
         <!--[if gte IE 10]><!-->
