Use local files instead of cdnjs for FontAwesome icons and Animate.css

--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aless website</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-    />
+    <link rel="stylesheet" href="assets/libs/font-awesome/css/all.min.css" />
+    <link rel="stylesheet" href="assets/libs/animate.css/animate.min.css" />
     <link rel="stylesheet" href="./styles.css" />
     <noscript
       ><style>
@@ -26,10 +24,6 @@
     />
     <meta name="description" content="Check out my website!" />
     <meta name="robots" content="noarchive" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
   </head>
   <body>
     <!-- Top navigation bar -->
