--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           id="toggleThemeBtn"
           onclick="lightMode(true)"
         >
-          <i class="fas fa-sun"></i> Light mode
+          <i class="fas fa-sun"></i>Light mode
         </button>
         <!--<![endif]-->
       </div>
@@ -58,15 +58,19 @@
     <div class="website-background">
       <div class="website-background-container"></div>
     </div>
-    <br />
 
     <!------------------------>
     <noscript
-      ><p style="text-align: center">
-        There is no JavaScript!<br /><br />Some parts of the website will not
-        work, such as the top navigation bar.<br /><br />If your browser doesn't
-        support JavaScript, upgrade it or choose another browser with JavaScript
-        support.<br /><br />Or, if you've disabled JavaScript, enable it!
+      ><p style="text-align: center">There is no JavaScript!</p>
+      <p style="text-align: center">
+        Some parts of the website will not work, such as the top navigation bar.
+      </p>
+      <p style="text-align: center">
+        If your browser doesn't support JavaScript, upgrade it or choose another
+        browser with JavaScript support.
+      </p>
+      <p style="text-align: center">
+        Or, if you've disabled JavaScript, enable it!
       </p></noscript
     >
     <div class="--ignore-light-mode animate__animated animate__bounceIn">
@@ -80,7 +84,7 @@
         <h2>Check out my social links!</h2>
         <form action="https://twitter.com/AlessGoss" target="_blank">
           <button class="button" type="submit">
-            <i class="fab fa-twitter"></i> Twitter profile
+            <i class="fab fa-twitter"></i>Twitter profile
           </button>
         </form>
         <form
@@ -88,31 +92,30 @@
           target="_blank"
         >
           <button class="button" type="submit">
-            <i class="fab fa-youtube"></i> YouTube channel
+            <i class="fab fa-youtube"></i>YouTube channel
           </button>
         </form>
         <form action="https://discord.com/invite/3uq9hDDwmn" target="_blank">
           <button class="button" type="submit">
-            <i class="fab fa-discord"></i> Discord server
+            <i class="fab fa-discord"></i>Discord server
           </button>
         </form>
         <form action="https://t.me/AlessBlog" target="_blank">
           <button class="button" type="submit">
-            <i class="fab fa-telegram"></i> Telegram blog
+            <i class="fab fa-telegram"></i>Telegram blog
           </button>
         </form>
         <form action="https://reddit.com/user/AlessDu59" target="_blank">
           <button class="button" type="submit">
-            <i class="fab fa-reddit"></i> Reddit profile
+            <i class="fab fa-reddit"></i>Reddit profile
           </button>
         </form>
       </div>
-      <br /><br />
       <div class="container animate__animated animate__bounceIn">
-        <br /><i class="fab fa-github"></i> GitHub<br /><br />
+        <p><i class="fab fa-github"></i>GitHub</p>
         <form action="https://github.com/AlessGoss" target="_blank">
           <button class="button" type="submit">
-            <i class="fas fa-user-circle"></i> Profile
+            <i class="fas fa-user-circle"></i>Profile
           </button>
         </form>
         <form
@@ -120,18 +123,16 @@
           target="_blank"
         >
           <button class="button" type="submit">
-            <i class="fas fa-code"></i> Website repository
+            <i class="fas fa-code"></i>Website repository
           </button>
         </form>
         <form action="https://gist.github.com/AlessGoss" target="_blank">
           <button class="button" type="submit">
-            <i class="fas fa-file-code"></i> Gists
+            <i class="fas fa-file-code"></i>Gists
           </button>
         </form>
-        <br /><br />
       </div>
     </div>
-    <br />
     <div class="--ignore-light-mode animate__animated animate__zoomIn">
       <p style="text-align: center; font-size: small; color: #aaa">
         &copy; 2021-2023 AlessGoss
