Remove light-dark mode system
I don't wanna focus on that for now.

--- a/index.html
+++ b/index.html
@@ -8,14 +8,7 @@
     <title>Aless website</title>
     <link rel="stylesheet" href="assets/libs/font-awesome/css/all.min.css" />
     <link rel="stylesheet" href="assets/libs/animate.css/animate.min.css" />
-    <link rel="stylesheet" href="./styles.css" />
-    <noscript
-      ><style>
-        #toggleThemeBtn {
-          display: none;
-        }
-      </style></noscript
-    >
+    <link rel="stylesheet" href="styles.css" />
     <script src="app.js"></script>
     <link rel="icon" href="favicon.png" />
     <meta
@@ -33,26 +26,17 @@
       style="width: 100%"
     >
       <div class="topnav">
-        <a href="/index.html"
+        <a href="index.html"
           ><img
-            src="../assets/logo.png"
+            src="assets/logo.png"
             class="topnavicon button"
             style="padding: 0 !important"
         /></a>
-        <form action="../index.html" class="topnavform">
+        <form action="index.html" class="topnavform">
           <button class="button topnavtitle --fix-topnav-height" type="submit">
             Aless website
           </button>
         </form>
-        <!--[if gte IE 10]><!-->
-        <button
-          class="button topnavtitle"
-          id="toggleThemeBtn"
-          onclick="lightMode(true)"
-        >
-          <i class="fas fa-sun"></i>Light mode
-        </button>
-        <!--<![endif]-->
       </div>
     </div>
     <div class="website-background">
@@ -73,13 +57,13 @@
         Or, if you've disabled JavaScript, enable it!
       </p></noscript
     >
-    <div class="--ignore-light-mode animate__animated animate__bounceIn">
+    <div class="animate__animated animate__bounceIn">
       <h1 style="text-align: center">Hi there, and welcome to my website!</h1>
       <h4 style="text-align: center">
         I test and code random stuff. My main interest is technology.
       </h4>
     </div>
-    <div style="text-align: center" class="--ignore-light-mode">
+    <div style="text-align: center">
       <div class="animate__animated animate__zoomIn">
         <h2>Check out my social links!</h2>
         <form action="https://twitter.com/AlessGoss" target="_blank">
@@ -133,7 +117,7 @@
         </form>
       </div>
     </div>
-    <div class="--ignore-light-mode animate__animated animate__zoomIn">
+    <div class="animate__animated animate__zoomIn">
       <p style="text-align: center; font-size: small; color: #aaa">
         &copy; 2021-2023 AlessGoss
       </p>
