--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Aless website</title>
     <link rel="stylesheet" href="assets/libs/font-awesome/css/all.min.css" />
     <link rel="stylesheet" href="assets/libs/animate.css/animate.min.css" />
-    <link rel="stylesheet" href="styles.css" />
-    <script src="app.js"></script>
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
     <link rel="icon" href="favicon.png" />
     <meta
       name="google-site-verification"
