Update text above social links in `index.html`

--- a/index.html
+++ b/index.html
@@ -58,14 +58,11 @@
       </p></noscript
     >
     <div class="animate__animated animate__bounceIn">
-      <h1 style="text-align: center">Hi there, and welcome to my website!</h1>
-      <h4 style="text-align: center">
-        I test and code random stuff. My main interest is technology.
-      </h4>
+      <h1 style="text-align: center">Welcome to my website! :)</h1>
     </div>
     <div style="text-align: center">
       <div class="animate__animated animate__zoomIn">
-        <h2>Check out my social links!</h2>
+        <h3>You can find my social links below:</h3>
         <form action="https://twitter.com/AlessGoss" target="_blank">
           <button class="button" type="submit">
             <i class="fab fa-twitter"></i>Twitter profile
