Update fade-out animation in 404 page

--- a/404.html
+++ b/404.html
@@ -17,9 +17,11 @@
       @keyframes slowly-fade-out {
         from {
           opacity: 1;
+          filter: blur(0);
         }
         to {
           opacity: 0;
+          filter: blur(50px);
         }
       }
       body {
