Multiple changes - read description
1. Turn all `<button>` elements back to `<a>` and remove their parent `<form>`.

Now it is much easier to do things like copying links in buttons. :)

2. Remove button scaling on `hover` and `active`.

--- a/index.html
+++ b/index.html
@@ -27,16 +27,9 @@
     >
       <div class="topnav">
         <a href="index.html"
-          ><img
-            src="assets/logo.png"
-            class="topnavicon button"
-            style="padding: 0 !important"
+          ><img src="assets/logo.png" class="topnavicon button"
         /></a>
-        <form action="index.html" class="topnavform">
-          <button class="button topnavtitle --fix-topnav-height" type="submit">
-            Aless website
-          </button>
-        </form>
+        <a href="index.html" class="button topnavtitle">Aless website</a>
       </div>
     </div>
     <div class="website-background">
@@ -63,55 +56,48 @@
     <div style="text-align: center">
       <div class="animate__animated animate__zoomIn">
         <h3>You can find my social links below:</h3>
-        <form action="https://twitter.com/AlessGoss" target="_blank">
-          <button class="button" type="submit">
-            <i class="fab fa-twitter"></i>Twitter profile
-          </button>
-        </form>
-        <form
-          action="https://www.youtube.com/channel/UCkmWOMZ3--qM5QVO6rx9qFQ"
-          target="_blank"
+        <a href="https://twitter.com/AlessGoss" target="_blank" class="button">
+          <i class="fab fa-twitter"></i>Twitter profile</a
         >
-          <button class="button" type="submit">
-            <i class="fab fa-youtube"></i>YouTube channel
-          </button>
-        </form>
-        <form action="https://discord.com/invite/3uq9hDDwmn" target="_blank">
-          <button class="button" type="submit">
-            <i class="fab fa-discord"></i>Discord server
-          </button>
-        </form>
-        <form action="https://t.me/AlessBlog" target="_blank">
-          <button class="button" type="submit">
-            <i class="fab fa-telegram"></i>Telegram blog
-          </button>
-        </form>
-        <form action="https://reddit.com/user/AlessDu59" target="_blank">
-          <button class="button" type="submit">
-            <i class="fab fa-reddit"></i>Reddit profile
-          </button>
-        </form>
+        <a
+          href="https://www.youtube.com/channel/UCkmWOMZ3--qM5QVO6rx9qFQ"
+          target="_blank"
+          class="button"
+          ><i class="fab fa-youtube"></i>YouTube channel</a
+        >
+        <a
+          href="https://discord.com/invite/3uq9hDDwmn"
+          target="_blank"
+          class="button"
+          ><i class="fab fa-discord"></i>Discord server</a
+        >
+        <a href="https://t.me/AlessBlog" target="_blank" class="button"
+          ><i class="fab fa-telegram"></i>Telegram blog</a
+        >
+        <a
+          href="https://reddit.com/user/AlessDu59"
+          target="_blank"
+          class="button"
+          ><i class="fab fa-reddit"></i>Reddit profile</a
+        >
       </div>
       <div class="container animate__animated animate__bounceIn">
         <p><i class="fab fa-github"></i>GitHub</p>
-        <form action="https://github.com/AlessGoss" target="_blank">
-          <button class="button" type="submit">
-            <i class="fas fa-user-circle"></i>Profile
-          </button>
-        </form>
-        <form
-          action="https://github.com/AlessGoss/alessgoss.github.io"
-          target="_blank"
+        <a href="https://github.com/AlessGoss" target="_blank" class="button"
+          ><i class="fas fa-user-circle"></i>Profile</a
         >
-          <button class="button" type="submit">
-            <i class="fas fa-code"></i>Website repository
-          </button>
-        </form>
-        <form action="https://gist.github.com/AlessGoss" target="_blank">
-          <button class="button" type="submit">
-            <i class="fas fa-file-code"></i>Gists
-          </button>
-        </form>
+        <a
+          href="https://github.com/AlessGoss/alessgoss.github.io"
+          target="_blank"
+          class="button"
+          ><i class="fas fa-code"></i>Website repository</a
+        >
+        <a
+          href="https://gist.github.com/AlessGoss"
+          target="_blank"
+          class="button"
+          ><i class="fas fa-file-code"></i>Gists</a
+        >
       </div>
     </div>
     <div class="animate__animated animate__zoomIn">
