--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aless website</title>
+    <!--[if lte IE 8]><!-->
+    <style>
+      i {
+        display: none;
+      }
+    </style>
+    <!--<![endif]-->
     <link rel="stylesheet" href="assets/libs/font-awesome/css/all.min.css" />
     <link rel="stylesheet" href="assets/libs/animate.css/animate.min.css" />
     <link rel="stylesheet" href="style.css" />
