Extract mobile layout CSS code to new file

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
     <!--<![endif]-->
     <link rel="stylesheet" href="assets/libs/font-awesome/css/all.min.css" />
     <link rel="stylesheet" href="assets/libs/animate.css/animate.min.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/stylesheets/main.css" />
+    <link
+      rel="stylesheet"
+      href="assets/stylesheets/mobile.css"
+      media="only screen and (max-width: 600px)"
+    />
     <link rel="icon" href="favicon.png" />
     <meta
       name="google-site-verification"
