--- a/404.html
+++ b/404.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page not found</title>
     <link rel="icon" href="/favicon.png" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="assets/stylesheets/main.css" />
     <meta
       name="description"
       content="This is where you are when you are lost on my website."
     />
     <meta name="robots" content="noindex" />
-    <meta http-equiv="refresh" content="8; url=/" />
+    <meta http-equiv="refresh" content="8; url=index.html" />
     <!--[if gte IE 10]><!-->
     <style>
       @keyframes slowly-fade-out {
