Move all images to `assets/images`

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       href="assets/stylesheets/mobile.css"
       media="only screen and (max-width: 600px)"
     />
-    <link rel="icon" href="favicon.png" />
+    <link rel="icon" href="assets/images/favicon.png" />
     <meta
       name="google-site-verification"
       content="Bf2Y0l0YWSFe-iqN4JecPsYjq7XJE_waZ6hBPq_z6Go"
@@ -38,7 +38,7 @@
     >
       <div class="topnav">
         <a href="index.html"
-          ><img src="assets/logo.png" class="topnavicon button"
+          ><img src="assets/images/logo.png" class="topnavicon button"
         /></a>
         <a href="index.html" class="button topnavtitle">Aless website</a>
       </div>
