Change the way that the website background appears

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aless website</title>
-    <!--[if lte IE 8]><!-->
+    <!--[if lt IE 9]><!-->
     <style>
       i {
         display: none;
@@ -43,9 +43,7 @@
         <a href="index.html" class="button topnavtitle">Aless website</a>
       </div>
     </div>
-    <div class="website-background">
-      <div class="website-background-container"></div>
-    </div>
+    <div class="website-background"></div>
 
     <!------------------------>
     <div class="animate__animated animate__bounceIn">
