Add alt text to "logo.png" on "index.html"

--- a/index.html
+++ b/index.html
@@ -38,14 +38,17 @@
     >
       <div class="topnav">
         <a href="index.html"
-          ><img src="assets/images/logo.png" class="topnavicon button"
+          ><img
+            src="assets/images/logo.png"
+            class="topnavicon button"
+            alt="My profile picture"
         /></a>
         <a href="index.html" class="button topnavtitle">Aless website</a>
       </div>
     </div>
     <div class="website-background"></div>
 
-    <!------------------------>
+    <!-- ------------------ -->
     <div class="animate__animated animate__bounceIn">
       <h1 style="text-align: center">Welcome to my website! :)</h1>
     </div>
