3 changes to the website favicon - read commit description
- Move favicon from /assets/images/ to /assets/icons/
- Switch favicon format from PNG to ICO
- Resize favicon from 25x25 pixels to 32x32 pixels

With the last 2 changes mentioned above, the website favicon will now show up on more web browsers.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       href="assets/stylesheets/mobile.css"
       media="only screen and (max-width: 600px)"
     />
-    <link rel="icon" href="assets/images/favicon.png" />
+    <link rel="icon" href="assets/icons/favicon.ico" />
     <meta
       name="google-site-verification"
       content="Bf2Y0l0YWSFe-iqN4JecPsYjq7XJE_waZ6hBPq_z6Go"
