Edit attributes in favicon <link> tag

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
       href="assets/stylesheets/mobile.css"
       media="only screen and (max-width: 600px)"
     />
-    <link rel="icon" href="assets/icons/favicon.ico" />
+    <link
+      rel="shortcut icon"
+      href="assets/icons/favicon.ico"
+      type="image/x-icon"
+    />
     <meta
       name="google-site-verification"
       content="Bf2Y0l0YWSFe-iqN4JecPsYjq7XJE_waZ6hBPq_z6Go"
