--- a/404.html
+++ b/404.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page not found</title>
-    <link rel="icon" href="assets/images/favicon.png" />
+    <link
+      rel="shortcut icon"
+      href="assets/icons/favicon.ico"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="assets/stylesheets/main.css" />
     <meta
       name="description"
